@@ -1,5 +1,8 @@
 CHANGE LOG / RELEASE NOTES: (Newest to Oldest)
 
+A21.1.001.0022 :
+* Stallion added generator blocks.
+
 A21.1.001.0021 :
 * Changes for compatibility with Darkness Falls.
 
